# database-dashboard

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  app_streamlit_legacy.py  auth.py  config.py  create_test_user.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.toml  test_db.py
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yml  deploy.yml  release.yml
DATABASE/: __init__.py  sqlite_db.py  supabase_db.py
RESOURCES/: cloudflare-entraid-deployment.md  database_schema.md
TESTS/: test_auth.py  test_database.py  test_db_facade.py  test_local_auth.py  test_supabase_auth.py
backend/: README.md  package-lock.json  package.json  tsconfig.node.json  wrangler.toml
backend/src/: dev-server.ts  index.ts  openapi.ts
backend/src/config/: auth.ts  database.ts
backend/src/lib/: supabase.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  db.ts
dashboard/: package.json
dashboard/pages/: index.md
dashboard/sources/supabase/: companies.sql  company_roles.sql  connection.yaml  farm_locations.sql  farm_referents.sql  farm_statuses.sql  farm_turbine_details.sql  farm_types.sql  farms.sql  person_roles.sql  persons.sql
docs/: Sprint_Change_Proposal.md  prd.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.3.story.md  2.4.story.md  2.8.story.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
legacy/: auth.py
legacy/src/: state.py
pages/: database_schema.py  login.py
src/: __init__.py  app.d.ts  database.py  hooks.server.ts
src/auth/: entra_auth.py  local_auth.py  manager.py  provider.py  supabase_auth.py
src/data/: sqlite_db.py  supabase_db.py
src/lib/server/: supabase.ts
src/lib/types/: farm.ts
src/routes/: +page.server.ts
src/routes/dashboard/: +page.svelte
src/routes/data/: +page.server.ts  +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
(+10 files in other folders)
