[project]
name = "wndmngr-app"
version = "1.1.0"
description = "Windmanager Database Management Application"
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.32.0",
    "supabase>=2.0.0",
    "dynaconf>=3.2.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-semantic-release>=9.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
branch = "main"
upload_to_vcs_release = true
build_command = "echo 'No build required for Streamlit app'"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
testpaths = ["TESTS"]
python_files = "test_*.py"
python_functions = "test_*"
